--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   http: ^0.13.5
   dio: ^4.0.4
   carousel_slider: ^4.1.1
+  shared_preferences: ^2.1.0
+  path_provider: ^2.0.14
+  archive: ^3.3.7
+  sqflite:
   flutter:
     sdk: flutter
 
@@ -63,7 +67,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  #  assets:
+  # destiny2_content/sqlite/es/world_sql_content_ec32dd2dae6f961bccf5472db4f48359:
+  #   content:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
