--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   moor_flutter: ^4.1.0
   appwrite: ^11.0.0
   image_picker: ^0.8.3
+  googleapis_auth: ^1.4.1
   flutter:
     sdk: flutter
 
